--- a/paginaDoUsuario.css
+++ b/paginaDoUsuario.css
@@ -60,14 +60,13 @@ nav{
     background-color: #F5EF52;
     display: flex;
     justify-content: center;
+    padding: 20px;
 }
 NAV #post{
     border-left: ;
 }
 
-#espacoamarelo{
-     background-color: #EFB726;
-}
+
 
 #posts {
     display: flex;
@@ -110,4 +109,5 @@ NAV #post{
 
 footer {
     background-color: #242021;
+    justify-content:end  ;
 }
