--- a/stylesLoginIndex.css
+++ b/stylesLoginIndex.css
@@ -14,12 +14,6 @@ h3 {
     cursor: pointer;
 }
 
-#nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
 
 .description {
     background-color: #F5EF52;
@@ -30,50 +24,45 @@ h3 {
 }
 
 
-.card {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: gray;
-    margin-right: 10px;
 
-}
 
    
 header {
     background-color: #F5EF52;
     display: flex;
-    margin: 0px;
     align-items: center;
     justify-content: space-between; 
-    flex-direction: row;
-    padding: 10px;
-    width: 100%;
-    
+    padding: 10px 20px; 
+    margin: 0; 
 }
 
 header button {
-    background-color: #EFB726;
+    background: transparent;
+    color: #967122;
+    font-weight:bolder;
+    font-size: medium;
     margin: 10px;
     padding: 10px;
     cursor: pointer;
     border: 0;
     border-radius: 5%;
     font-family: "Inter", sans-serif;
-    color: white;
 }
 
 header button.login {
-    background-color: #B3261E;
-    color: white;
+    background:transparent;
+    color: #967122;
+    font-weight:bolder;
+    font-size: medium;
 }
-header #nav-bar{
-    flex-direction:row-reverse;
-    justify-content: center;
+
+header .nav-bar {
+    flex-direction: row;
+    align-items: center;
+    display: flex;
 }
 
 header #pesquisa {
-    flex: 2;
     margin: 10px;
     padding: 10px;
     border: 0;
@@ -95,8 +84,37 @@ nav{
     justify-content: center;
     padding: 20px;
 }
+.carrosel{
+    display: grid;
+    display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 
+}
 
+.card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    background: #fff;
+    flex: 0;
+}
+.card-link {
+    text-decoration: none;
+    color: inherit; 
+    display: block; 
+    height: 100%; 
+}
+
+.card:hover {
+    transform: scale(1.05); 
+}
+.cardText{
+    color: black;
+}
 
 #posts {
     display: flex;
@@ -107,7 +125,6 @@ nav{
     flex-direction: row;
     margin: 150px 20px;
 }
-
 
 footer {
     background-color: #242021;
