--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 * {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+ 
+img {
+    width: 100%;
 }
 
 :root {
@@ -15,28 +20,32 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    color: #EFB726;
+    color: #f4f2ed;
     text-decoration: none;
 }
 
 header {
-    background-color: #F5EF52;
+    background-color: #e9e9af;
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 30px 100px;
+    justify-content: center;
+    padding: 20px 100px;
     z-index: 10;
 }
 .nav {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .nav li {
     list-style: none;
     margin: 0 10px;
+    align-items: center;
+    justify-content: center;
     
 }
 
@@ -53,27 +62,6 @@ header {
     color: var(--primary);
 }
 
-.search {
-    position: relative;
-    height: 20px;
-    
-}
-
-.search input {
-    position: inherit;
-    left: 0;
-    top: 0;
-    background: transparent;
-    border: solid rgba(255, 255, 255, 0.5);
-    width: 50%;
-    border-radius: 4px;
- 
-}
-
-.search .btn {
-    color: #EFB726;
-    text-decoration: none;
-    font-weight: 600p;
 }
 
 footer {
@@ -81,21 +69,9 @@ footer {
     justify-content:end  ;
 }
 
-.banner img .banner2 {
-    width: 100%;
-    justify-content: center;
-}
 
-.image-container {
+ul {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px; /* Espaçamento entre as imagens */
-    margin: 20px 0; /* Espaçamento acima e abaixo */
-}
-
-.image-container img {
-    max-width: 100%; /* Imagens não excedem o tamanho do contêiner */
-    height: auto; /* Mantém a proporção */
-    flex: 1 1 300px; /* Imagens ocupam espaço flexível */
+    justify-content: space-around;
+    list-style: none;
 }
