--- a/stylepaginadeReceita.css
+++ b/stylepaginadeReceita.css
@@ -1,8 +1,16 @@
 img {
     width: 100%;
     height: auto;
-  }
-
+}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    text-decoration: none;
+}
 h3 {
     background-color: #F5EF52;
     margin: 10px;
