--- a/stylepaginadeReceita.css
+++ b/stylepaginadeReceita.css
@@ -11,6 +11,33 @@ body {
     min-height: 100vh;
     text-decoration: none;
 }
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav li {
+    list-style: none;
+    margin: 0 10px;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.nav li a {
+    color: #EFB726;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.nav li:hover a {
+    color: var(--primary);
+}
+
 h3 {
     background-color: #F5EF52;
     margin: 10px;
