--- a/stylesPaginaDePesquisa.css
+++ b/stylesPaginaDePesquisa.css
@@ -1,3 +1,34 @@
+* {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    color: #1b1915;
+    text-decoration: none;
+}
+
+header {
+    background-color: #e9e9af;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 100px;
+    z-index: 10;
+}
+
 .pesquisa-recentes{
     margin: 0;
     padding: 0;
