--- a/paginaDoUsuario.css
+++ b/paginaDoUsuario.css
@@ -1,5 +1,3 @@
-
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -17,6 +15,32 @@ header {
     justify-content: space-between; 
     padding: 10px 20px; 
     margin: 0; 
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav li {
+    list-style: none;
+    margin: 0 10px;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.nav li a {
+    color: #EFB726;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.nav li:hover a {
+    color: var(--primary);
 }
 
 header button {
