--- a/stylepaginadeReceita.css
+++ b/stylepaginadeReceita.css
@@ -1,7 +1,10 @@
 img {
     width: 100%;
     height: auto;
+    margin-bottom: 40px;
+    margin-top: 70px;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -16,6 +19,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #242021;
 }
 .nav li {
     list-style: none;
@@ -26,7 +30,7 @@ body {
 }
 
 .nav li a {
-    color: #EFB726;
+    color: #994711;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
@@ -64,20 +68,14 @@ h3 {
     margin-right: 10px;
 
 }
-
-   
 header {
-    background-color: #F5EF52;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    padding: 10px 20px; 
-    margin: 0; 
+    background-color: #e5e555;
 }
+
 
 header button {
     background: transparent;
-    color: #967122;
+    color: #857042;
     font-weight:bolder;
     font-size: medium;
     margin: 10px;
