--- a/stylepaginadeReceita.css
+++ b/stylepaginadeReceita.css
@@ -30,7 +30,7 @@ body {
 }
 
 .nav li a {
-    color: #994711;
+    color: #EFB726;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
