--- a/stylesLoginIndex.css
+++ b/stylesLoginIndex.css
@@ -79,19 +79,32 @@ ul {
 #section-bottom {
     background-color: #242021;
     color: #e5e555;
-    text-align: left;
+    text-align: start;
+    display: flexbox;
     justify-content: center;
+    
+}
+
+.video {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #444444;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
 }
 
 
-#section-bottom {
-   
-    align-items: column;
-    background-color: #242021;
-}
 
 #section-bottom img {
     width: 10%;
-    display: flex;
-    align-items: column;
+    
+}
+
+.img1 {
+    display: flexbox;
 }
