--- a/stylesLoginIndex.css
+++ b/stylesLoginIndex.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Ari;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -87,21 +87,8 @@ ul {
     text-align: start;
     justify-content: center;
     
+    
 }
-
-.video {
-    width: 60%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #444444;
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 10px;
-    position: relative;
-}
-
 
 
 #section-bottom img {
@@ -112,11 +99,21 @@ ul {
 
 h1 {
     color: #444444;
-    t
+    padding: 10px;
 }
 
 #texto {
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 10px;
+    padding: 10px;
+    justify-content: center;
+    background-color: white;
 }
 
+section-bottom a {
+    display: flex;
+    align-items: center;
+    gap: 2%;
+    color: rgba(235, 236, 230, 0.918);
+    text-decoration: none;
+}
