--- a/stylesPaginaDePesquisa.css
+++ b/stylesPaginaDePesquisa.css
@@ -115,3 +115,14 @@ section-bottom{
 #card {
     background-color: #EFB726;
 }
+
+footer {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #e5e555;
+    color: #1a1407;
+    box-sizing: border-box;  
+}
