--- a/stylepaginadeReceita.css
+++ b/stylepaginadeReceita.css
@@ -1,36 +1,20 @@
 img {
     width: 100%;
-    height: auto;
-  }
-
-h3 {
-    background-color: #F5EF52;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
-
-
-.description {
-    background-color: #F5EF52;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
-
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    color: #1b1915;
+    text-decoration: none;
 }
 
-
-.card {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: gray;
-    margin-right: 10px;
-
-}
-
-   
 header {
     background-color: #F5EF52;
     display: flex;
@@ -40,9 +24,62 @@ header {
     margin: 0; 
 }
 
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav li {
+    list-style: none;
+    margin: 0 10px;
+    align-items: center;
+}
+
+.nav li a {
+    color: #7c5b08;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.nav li:hover a {
+    color: var(--primary);
+}
+
+ul {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+h3 {
+    background-color: #F5EF52;
+    margin: 10px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.description {
+    background-color: #F5EF52;
+    margin: 10px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.card {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: gray;
+    margin-right: 10px;
+}
+
 header button {
     background: transparent;
-    color: #967122;
+    color: #857042;
     font-weight:bolder;
     font-size: medium;
     margin: 10px;
@@ -88,10 +125,10 @@ nav{
     justify-content: center;
     padding: 20px;
 }
+
 NAV #post{
     border-left:saddlebrown ;
 }
-
 
 #posts {
     display: flex;
@@ -103,8 +140,34 @@ NAV #post{
     margin: 150px 20px;
 }
 
-
 footer {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #e5e555;
+    color: #1a1407;
+    box-sizing: border-box;  
+}
+
+#section-bottom img {
+    width: 10%;  
+    margin-left: 2%;
+    border-radius: 8px;
+}
+
+#section-bottom {
     background-color: #242021;
-    justify-content:end  ;
+    color: #e5e555;
+    text-align: start;
+    justify-content: center;  
+}
+
+section-bottom a {
+    display: flex;
+    align-items: center;
+    gap: 2%;
+    color: rgba(235, 236, 230, 0.918);
+    text-decoration: none;
 }
