--- a/stylesLoginIndex.css
+++ b/stylesLoginIndex.css
@@ -1,32 +1,20 @@
-* {
+img {
+    width: 100%;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    color: #1b1915;
     text-decoration: none;
 }
 
-img {
-    width: 100%;
-    height: auto;
-  }
-
-h3 {
-    background-color: #F5EF52;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
-}
-
-
-.description {
-    background-color: #F5EF52;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
-
-}
-
-
-
-
-   
 header {
     background-color: #F5EF52;
     display: flex;
@@ -36,97 +24,84 @@ header {
     margin: 0; 
 }
 
-header button {
-    background: transparent;
-    color: #967122;
-    font-weight:bolder;
-    font-size: medium;
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
-    border: 0;
-    border-radius: 5%;
-    font-family: "Inter", sans-serif;
-}
-
-header button.login {
-    background:transparent;
-    color: #967122;
-    font-weight:bolder;
-    font-size: medium;
-}
-
-header .nav-bar {
-    flex-direction: row;
+nav {
+    display: flex;
     align-items: center;
-    display: flex;
-}
-
-header #pesquisa {
-    margin: 10px;
-    padding: 10px;
-    border: 0;
-    background: transparent;
-    border-bottom: black 1px solid;
-}
-
-header #buscar {
-    border: 0;
-}
-
-.capa {
-    margin-top: 150px;
-}
-
-nav{
-    background-color: #F5EF52;
-    display: flex;
     justify-content: center;
-    padding: 20px;
-}
-.carrosel{
-    display: grid;
-    display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-
 }
 
-.card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    padding: 20px;
-    width: 300px;
-    text-align: center;
-    background: #fff;
-    flex: 0;
+.nav li {
+    list-style: none;
+    margin: 0 10px;
+    align-items: center;
 }
-.card-link {
+
+.nav li a {
+    color: #7c5b08;
     text-decoration: none;
-    color: inherit; 
-    display: block; 
-    height: 100%; 
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-.card:hover {
-    transform: scale(1.05); 
-}
-.cardText{
-    color: black;
-}
-
-#posts {
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: center;
-    align-items: center;
-    background-color: #F1F2E7;
-    flex-direction: row;
-    margin: 150px 20px;
+.nav li:hover a {
+    color: var(--primary);
 }
 
 footer {
-    background-color: #242021;
-    justify-content:end  ;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #e5e555;
+    color: #1a1407;
+    box-sizing: border-box;  
 }
+
+ul {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+#section-bottom {
+    background-color: #242021;
+    color: #e5e555;
+    text-align: start;
+    justify-content: center;  
+}
+
+
+#section-bottom img {
+    width: 10%;  
+    margin-left: 2%;
+    border-radius: 8px;
+}
+
+h1 {
+    color: #444444;
+    padding: 10px;
+}
+
+span {
+    margin-left: 2%;
+}
+
+#texto {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
+    justify-content: center;
+    background-color: white;
+}
+
+section-bottom a {
+    display: flex;
+    align-items: center;
+    gap: 2%;
+    color: rgba(235, 236, 230, 0.918);
+    text-decoration: none;
+}
+
