--- a/stylesLogin.css
+++ b/stylesLogin.css
@@ -11,7 +11,7 @@ body {
 
 
 main {
-    background-image: url("assets/top-view-food-ingredients-with-notebook-pumpkin.jpg"); 
+    background-image: url("C:/Users/Pichau/Downloads/Proz-main/assets/top-view-food-ingredients-with-notebook-pumpkin.jpg"); 
     padding: 20px;
     flex-grow: 1;
     display: flex;
@@ -31,9 +31,6 @@ form {
 }
 #login{
     box-shadow: 0 0 20px 0 black;
-}
-#cadastro{
-    background-color: #EFB726;
 }
 
 form h1 {
@@ -72,34 +69,27 @@ form button {
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    margin-top: 10px;
+    margin: 10px;
+    display: grid;
 }
-
+.buttonsform{
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    margin: 5px;
+}
+.BtnCadastrese{
+    text-decoration: none;
+}
 form button:hover {
     background-color: #B3261E;
 }
 
 section{
     margin: auto;
-    margin-right: 0px !important;
+   
     background-color: white !important;
 }
-aside{
-    background-color: #EFB726 !important;
-    margin: auto;
-    margin-left: 0px !important;
-    padding: 28px;
-    box-shadow: 0 0 20px 0 black;
-
-    button{
-        background-color: white;
-        color:#333
-    }
-<<<<<<< HEAD
-}
-=======
-}
 
 
 
->>>>>>> 564c2edbd675922ca1813a39dd48960b690c82fc
+
